@@ -2,4 +2,5 @@ autom4te.cache
 Makefile
 pkgIndex.tcl
 *.dll
+*.so
 config.status
