@@ -9,14 +9,14 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: sample.test,v 1.1 2002/03/06 05:35:31 hobbs Exp $
+# RCS: @(#) $Id: sample.test,v 1.2 2010/04/23 11:51:53 nijtmans Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
     namespace import ::tcltest::*
 }
 
-package require Tclsha1
+package require sample
 
 test sha-1.1 {Use of -string operand} {
     set result [sha1 -string foo]
