@@ -18,7 +18,7 @@
 # Copyright (c) 2003-2006 Pat Thoyts
 #
 #-------------------------------------------------------------------------
-# RCS: @(#)$Id: makefile.vc,v 1.11 2009/05/04 23:47:55 patthoyts Exp $
+# RCS: @(#)$Id: makefile.vc,v 1.12 2010/04/23 11:51:53 nijtmans Exp $
 #-------------------------------------------------------------------------
 
 # Check to see we are configured to build with MSVC (MSDEVDIR or MSVCDIR)
@@ -150,8 +150,8 @@ Please `cd` to its location first.
 # information is used to generate the name of the package library and
 # it's install location.
 #
-# For example, the sample extension is  going to build sample04.dll and
-# would install it into $(INSTALLDIR)\lib\sample04
+# For example, the sample extension is  going to build sample05.dll and
+# would install it into $(INSTALLDIR)\lib\sample05
 #
 # You need to specify the object files that need to be linked into your
 # binary here.
@@ -422,7 +422,7 @@ $(OUT_DIR)\pkgIndex.tcl: $(ROOT)\pkgIndex.tcl.in
 @PACKAGE_NAME@       $(PROJECT)
 @PKG_LIB_FILE@       $(PRJLIBNAME)
 <<
-	@echo package ifneeded Tclsha1 $(DOTVERSION) \
+	@echo package ifneeded sample $(DOTVERSION) \
 	    [list load [file join $$dir $(PRJLIBNAME)] Sample] >> $@
 
 #---------------------------------------------------------------------
