@@ -1,6 +1,7 @@
 2010-04-23  Jan Nijtmans <nijtmans@users.sf.net>
 
 	* configure: Regenerated to use latest TEA tcl.m4.
+	* [Bug 2782806] sample package's test cases fail
 
 2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>
 
